--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,7 @@ body {
 .wrapper {
   /*add display:flex and set justify-content to space-between*/
   font-weight: 700;
+  background-color: #f16059;
   display: flex;
   justify-content: space-between;
 }
@@ -118,15 +119,17 @@ body {
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   color: #fff;
+  background-color: #ff9966;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
+  font-size: 1.2em;
+  height: 600px;
   width: 30%;
+  padding: 0px 10px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 
 
 
