--- a/css/main.css
+++ b/css/main.css
@@ -96,41 +96,76 @@ textarea {
    ========================================================================== */
 
 
-html {
-  background-color: #fff;
-  height: 100%;
+   html {
+    background-color: #000;
+    height: 100%;
+    width: 100%;
+  }
+  
+  body {
+    font-family: 'Source Sans Pro', sans-serif;
+    padding: 0 2em;
+    font-size: 1.25em;
+    height: 100%;
+    color: #fff;
+  }
+
+  header {
+    font-size: 2.5rem;
 }
-
-body {
-  font-family: 'Source Sans Pro', sans-serif;
-  padding: 2em;
-  font-size: 1.25em;
-  height: 100%;
-}
-
-.wrapper {
-  /*add display:flex and set justify-content to space-between*/
-  font-weight: 700;
-  background-color: #f16059;
-  display: flex;
-  justify-content: space-between;
-}
-
-.div-1, .div-2, .div-3 {
-  /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
-  background-color: #ff9966;
-  line-height: 1.5em;
-  font-size: 1.2em;
-  height: 600px;
-  width: 30%;
-  padding: 0px 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
+  
+  header,
+  footer {
+    background-color: #222;
+    height: 80px;
+    width: 100%;
+  }
+  
+  main {
+    background-color: #222;
+    font-size: 2rem;
+    height: 250px;
+    width: 100%;
+    font-family: 'rubik' sans-serif;
+  }
+  
+  header,
+  footer,
+  main {
+    padding: .5rem .3rem;
+    margin: 1rem 0;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      border: 5px solid #cc0099;
+  
+  }
+  
+  .flex-container {
+    padding: .5em .3rem;
+    margin: 1rem 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: wrap;
+      justify-content: space-between;
+  
+  }
+  
+  .flex-items {
+    color: #cc0099;
+    line-height: 1.5em;
+    font-size: 1.6em;
+    background-color: #ffb8ed;
+    width: 33%;
+    height: 500px;
+    padding: 0 .3rem;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
 
 
 
